docs/7.56/md/abenbdl_internal.md
---
title: "CDS BDL - internal"
description: |
  Syntax ... internal ... Effect Defines a RAP BO operation(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_bo_operation_glosry.htm 'Glossary Entry') as internal(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_internal_operation_glosry.htm 'Glossary Entry'). T
version: "7.56"
category: "cds"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_internal.htm"
abapFile: "abenbdl_internal.htm"
keywords: ["select", "insert", "update", "delete", "do", "if", "try", "method", "class", "data", "abenbdl", "internal"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Core Data Services (ABAP CDS)](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds.htm) →  [ABAP CDS - RAP Objects](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_rap_objects.htm) →  [ABAP CDS - RAP Business Objects (RAP BO)](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_rap_business_objects.htm) →  [ABAP CDS - Behavior Definitions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_bdef.htm) →  [ABAP CDS - BDL for Behavior Definitions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl.htm) →  [ABAP CDS - managed and unmanaged behavior definitions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_rap_bo.htm) →  [CDS BDL - entity behavior definition](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_define_beh.htm) →  [CDS BDL - entity behavior body](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_body.htm) →  [CDS BDL - RAP BO operations](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_operations.htm) →  [CDS BDL - RAP BO operation, additions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_operations_additions.htm) → 

CDS BDL - internal

Syntax

... internal ...

Effect

Defines a [RAP BO operation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_bo_operation_glosry.htm "Glossary Entry") as [internal](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_internal_operation_glosry.htm "Glossary Entry"). That means that the operation in question can only be accessed from within the [ABAP behavior pool](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbehavior_pool_glosry.htm "Glossary Entry"), for example from an [action](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_action.htm), a [validation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_validations.htm), or a [determination](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_determinations.htm). When an external [RAP BO consumer](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_bo_consumer_glosry.htm "Glossary Entry") tries to execute an internal RAP BO operation, a [runtime error](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenruntime_error_glosry.htm "Glossary Entry") occurs.

internal can be applied to the following operations:

-   [standard operations](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_standard_operations.htm)
-   [operations for associations](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_association.htm)
-   [actions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_action.htm)
-   [functions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_function.htm)
-   [determine actions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_determine_action.htm)
-   [draft actions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_draft_action.htm)

This feature is provided by the [RAP framework](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_framework_glosry.htm "Glossary Entry"). No implementation in the [ABAP behavior pool](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbehavior_pool_glosry.htm "Glossary Entry") is required.

Hints

-   If an operation is marked as internal, [feature control](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_actions_fc.htm) is not supported. Feature control is for external access control and is not required for internal operations.
-   [precheck](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_precheck.htm) is not available for internal operations.
-   [authorization:update](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenbdl_actions_auth_update.htm) is not available for internal operations.

Example

The following example shows a managed BDEF that defines the internal action calculateTotalAmount and the on modify determination calcTotal.

managed implementation in class bp\_demo\_rap\_internal unique;
strict;
define behavior for DEMO\_RAP\_INTERNAL alias RootEntity
persistent table demo\_dbtab\_field
lock master
authorization master (global)
{
  create;
  update;
  delete;
  field(numbering:managed, readonly) KeyField;
  internal action calculateTotalAmount;
  determination calcTotal on modify { create; }
  mapping for demo\_dbtab\_field
  {
    KeyField = key\_field;
    CharField = char\_field1;
    Amount = int\_field1;
    Quantity = int\_field2;
    Total = int\_field3;
  }
}

The internal action multiplies the value of field Quantity with the value of field Amount and inserts the result into field Total per entity instance. It is executed from the ABAP behavior pool by the on modify determination calcTotal.

Code snippet: determination that triggers the internal action:

METHOD calcTotal.
  MODIFY ENTITIES OF demo\_rap\_internal IN LOCAL MODE
      ENTITY RootEntity
        EXECUTE calculateTotalAmount
          FROM CORRESPONDING #( keys )
          REPORTED DATA(lt\_reported).
ENDMETHOD.

For the full ABAP behavior pool implementation, see CCIMP include.

The ABAP program DEMO\_RAP\_INTERNAL uses [EML](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abeneml_glosry.htm "Glossary Entry") to access the RAP business object:

-   It creates five new entity instances by specifying values for the fields Amount and Quantity.
    
    Code snippet:
    

DELETE FROM demo\_dbtab\_field.
    MODIFY ENTITIES OF demo\_rap\_internal
       ENTITY RootEntity
       CREATE
       SET FIELDS WITH VALUE #(
       ( %cid = '1' Amount = 16  Quantity = 1 )
       ( %cid = '2' Amount = 211 Quantity = 2 )
       ( %cid = '3' Amount = 3   Quantity = 3 )
       ( %cid = '4' Amount = 18  Quantity = 4 )
       ( %cid = '5' Amount = 10  Quantity = 5 ) )
          MAPPED DATA(mapped)
          FAILED  DATA(failed)
          REPORTED DATA(reported).
    COMMIT ENTITIES.

-   Using the ABAP SQL SELECT statement, the content of the underlying database table is displayed.

Result: for each entity instance, the value of the field Total is calculated.

![Figure](bdoc_internal.png)